Trying to fix the parallax on small screens.

--- a/css/main.css
+++ b/css/main.css
@@ -197,6 +197,10 @@ nav li {
   opacity: 1;
 }
 
+section {
+  display: block;
+}
+
   /* PARALLAX */
 section.module.content {
   padding: 40px 0;
